# NimbleIDE

./: .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  NimbleMenu.cfg  README.md  Session.vim  deleteBuild.bat
.github/ISSUE_TEMPLATE/: bug_report.md  development.md  feature_request.md
.github/workflows/: cmake-single-platform.yml  cmake-windows.yml
Content/: story.txt
ExternalLibraries/PDCurses/: curses.h  pdcurses.lib
NimbleIDE/: CMakeLists.txt  CMakelists.txt  README.md
NimbleIDE/Content/: test.txt
NimbleIDE/TestNimbleIDE/: CMakeLists.txt  CmakeLists.txt  README.md
NimbleIDE/TestNimbleIDE/docs/: Doxyfile
NimbleIDE/TestNimbleIDE/src/: unitTests.cpp
NimbleIDE/docs/: Doxyfile
NimbleIDE/inc/Modules/Screen/: ScreenInfo.h
NimbleIDE/src/: main.cpp
NimbleIDE/src/Modules/Screen/: ScreenInfo.cpp
NimbleLIB/: CMakeLists.txt  README.MD
NimbleLIB/docs/: Doxyfile
NimbleLIB/inc/: NimbleLib.h
NimbleLIB/inc/Modules/Curses/: CursesColour.h  CursesKeyboard.h  CursesMenu.h  CursesMouse.h  CursesWin.h
NimbleLIB/inc/Modules/Editor/: EditorHexWin.h  EditorLineNumbersWin.h  EditorProjectWin.h  EditorStatusWin.h  EditorTitleWin.h
NimbleLIB/inc/Modules/ErrorHandling/: ErrorHandler.h  Errors.h
NimbleLIB/inc/Modules/FileHandling/: FileManager.h
NimbleLIB/inc/Modules/Framework/: CFrameworkObject.hpp
NimbleLIB/inc/Modules/Global/: Globals.h
NimbleLIB/inc/Modules/IDE/: IDEButton.h  IDEDialog.h  IDEEditBox.h  IDEEditline.h  IDEEditor.h  IDEFileDialog.h  IDEFileHandler.h  IDEManager.h  IDEWindow.h
NimbleLIB/inc/Modules/Logging/: Logger.h
NimbleLIB/inc/Modules/Screen/: ScreenBox.h  ScreenControl.h  ScreenInfo.h  ScreenPrint.h  ScreenWord.h
NimbleLIB/inc/Modules/Utilities/: StatusCtrl.h  Tools.h
NimbleLIB/src/Modules/Curses/: CursesColour.cpp  CursesKeyboard.cpp  CursesMenu.cpp  CursesMouse.cpp  CursesWin.cpp
NimbleLIB/src/Modules/Editor/: EditorHexWin.cpp  EditorLineNumbersWin.cpp  EditorProjectWin.cpp  EditorStatusWin.cpp  EditorTitleWin.cpp
NimbleLIB/src/Modules/ErrorHandling/: ErrorHandler.cpp
NimbleLIB/src/Modules/FileHandling/: FileManager.cpp
NimbleLIB/src/Modules/Global/: Globals.cpp
NimbleLIB/src/Modules/IDE/: IDEButton.cpp  IDEDialog.cpp  IDEEditBox.cpp  IDEEditline.cpp  IDEEditor.cpp  IDEFileDialog.cpp  IDEFileHandler.cpp  IDEManager.cpp  IDEWindow.cpp
NimbleLIB/src/Modules/Logging/: Logger.cpp
NimbleLIB/src/Modules/Screen/: ScreenBox.cpp  ScreenControl.cpp  ScreenInfo.cpp  ScreenPrint.cpp  ScreenWord.cpp
NimbleLIB/src/Modules/Utilities/: StatusCtrl.cpp  Tools.cpp
NimbleUtils/NimbleCalc/: CMakeLists.txt  README.md
NimbleUtils/NimbleCalc/docs/: Doxyfile
NimbleUtils/NimbleCalc/src/: main.cpp
NimbleUtils/NimbleMenu/: CMakeLists.txt  README.md
NimbleUtils/NimbleMenu/docs/: Doxyfile
NimbleUtils/NimbleMenu/inc/Modules/: MenuConfig.h
NimbleUtils/NimbleMenu/src/: main.cpp
NimbleUtils/NimbleMenu/src/Modules/: MenuConfig.cpp
Snippets/visual-studio/: comment.snippet  fileHeader.snippet  filefooter.snippet  functionheader.snippet
Snippets/vscode-nvim/: global.json
TestNimbleIDE/: CMakeLists.txt
TestNimbleIDE/src/: unitTests.cpp
TestNimbleLIB/: CMakeLists.txt
TestNimbleLIB/docs/: Doxyfile
TestNimbleLIB/inc/: unitTests_ErrorHandler.h  unitTests_IDEEdit.h  unitTests_Screen.h
TestNimbleLIB/src/: unitTests.cpp
